# Monoclaw

./: README.md  TASK_CADABRA2.md
Deployments/DockerBuilds/Physics/Cadabra2/: Dockerfile  build_configuration.yml  docker-compose.yml  run.sh  run_configuration.yml  run_gui.sh
JavaScript/latex-viewer/: README.md  index.html
JavaScript/mission-control/: .env.example  BRIEF.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
JavaScript/mission-control/public/: memory-index.json
JavaScript/mission-control/src/: App.tsx  index.css
JavaScript/mission-control/src/api/: modelClient.ts  openclawClient.ts
JavaScript/mission-control/src/components/: ApiUsagePanel.tsx  ContextBar.tsx  HealthGrid.tsx  MemoryScreen.tsx  ModelSelector.tsx  ModelStatus.tsx  ModelUsageBreakdown.tsx  TokenMetrics.tsx
JavaScript/mission-control/src/config/: models.ts
JavaScript/mission-control/src/store/: useMissionStore.ts
Python/Cadabra2/Srednicki/: ch34_left_right_spinors.py  ch34_left_right_spinors.tex  ch35_sigma_algebra.py  ch36_export_latex.py  ch60_spinor_helicity.py
Python/finance/: schwab_rgl_processor.py  schwab_transactions_processor.py
Python/knowledge-base/: pyproject.toml
Python/knowledge-base/Configurations/: embedding_server_configuration.yml.example  knowledge_base_configuration.yml.example
Python/knowledge-base/knowledge_base/: __init__.py
Python/knowledge-base/knowledge_base/Databases/: CommonSQLStatements.py  Configuration.py  PostgreSQLConnection.py  PostgreSQLInterface.py  SQLStatements.py  __init__.py
Python/knowledge-base/knowledge_base/EmbeddingServer/: __init__.py  configuration.py  server.py
Python/knowledge-base/knowledge_base/Embeddings/: PplxContextEmbedder.py  TextChunker.py  __init__.py
Python/knowledge-base/knowledge_base/Ingestion/: DocumentProcessor.py  FileIngester.py  __init__.py
Python/knowledge-base/tests/TestSetup/: knowledge_base_test_configuration.yml
Python/knowledge-base/tests/integration_tests/Databases/: test_KnowledgeBaseSetup.py
Python/knowledge-base/tests/integration_tests/EmbeddingServer/: test_server.py
Python/knowledge-base/tests/integration_tests/Embeddings/: test_PplxContextEmbedder.py
Rust/docker_builder/src/: build_docker.rs  configuration.rs  lib.rs  main.rs  run_docker.rs
Rust/docker_builder/src/build_docker/: build_docker.rs  build_docker_command.rs  create_dockerfile.rs
Rust/docker_builder/src/configuration/: build_docker_configuration.rs  run_docker_configuration.rs
Rust/docker_builder/src/run_docker/: build_docker_run_command.rs  run_docker.rs
Rust/knowledge-base/: Cargo.toml  README.md
Rust/knowledge-base/Configurations/: embedding_client_configuration.yml.example  knowledge_base_configuration.yml.example
Rust/knowledge-base/src/: configuration.rs  lib.rs  main.rs  models.rs  sql_statements.rs
Rust/knowledge-base/src/database/: connection.rs  interface.rs  mod.rs
Rust/knowledge-base/src/embedding/: client.rs  config.rs  mod.rs  types.rs
Rust/knowledge-base/src/ingestion/: file_ingester.rs  mod.rs  pipeline.rs  text_chunker.rs
Rust/knowledge-base/tests/: integration_test.rs
Rust/pg-toolkit/: Cargo.toml
Rust/pg-toolkit/Configurations/: pg_configuration.yml.example
Rust/pg-toolkit/src/: admin.rs  config.rs  connection.rs  introspection.rs  lib.rs
Rust/pg-toolkit/tests/: integration_test.rs  test_admin.rs  test_connection.rs  test_introspection.rs
Rust/pg-toolkit/tests/TestSetup/: pg_test_configuration.yml
Rust/pg-toolkit/tests/common/: mod.rs
Scripts/DockerBuilds/knowledge-base/: .env.example  Dockerfile.embedding-server  docker-compose.yml
