[tool.poetry]
name = "knowledge-base"
version = "0.1.0"
description = ""
authors = ["Ernest Yeung <ernestyalumni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.29.0"
pyyaml = "^6.0"
transformers = "^4.40.0"
sentence-transformers = "^5.0.0"
numpy = "^1.26.0"
torch = {version = "^2.0.0", optional = true}
fastapi = {version = "^0.111.0", optional = true}
uvicorn = {extras = ["standard"], version = "^0.30.0", optional = true}

[tool.poetry.extras]
gpu = ["torch"]
server = ["fastapi", "uvicorn"]
all = ["torch", "fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
