[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kb"
path = "src/main.rs"

[dependencies]
pg-toolkit = { path = "../pg-toolkit" }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "macros"] }
pgvector = { version = "0.4", features = ["sqlx"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
pdf-extract = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
integration = []
