[package]
name = "pg-toolkit"
version = "0.1.0"
edition = "2024"
description = "Generic PostgreSQL toolkit for Rust applications"
authors = ["Ernest Yeung <ernestyalumni@gmail.com>"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
integration = []
